package com.management;

public interface Desk {
    int getCount();
    void build(String filename);
}
