package com.management;

public interface Registrar {
     String addToList(String data);
}
